--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/utilities.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <title>Welcome to Edge Ledger</title>
+    <!-- Finance Company Website -->
   </head>
   <body id="home">
     <header class="hero">
